style.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
* {
  font-family: "Montserrat", sans-serif;
  margin: 0;
  box-sizing: border-box;
  padding: 0;
}
html {
  scroll-behavior: smooth;
}
header {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  height: 140px;
  background-color: black;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.header__menu {
  display: flex;
  list-style: none;
}
.header__social {
  display: flex;
  align-items: center;
}
.menu__item {
  display: flex;
  flex-direction: column;
  margin-left: 55px;
}
.menu__item span {
  color: #a8a8a8;
  font-size: 18px;
}
.menu__item a {
  color: white;
  text-decoration: none;
  font-weight: bold;
  transition: color 0.15s ease-out;
}
.menu__item a:hover {
  color: #ff1400;
}
.header__social {
  gap: 20px;
}
.header__social-item {
  display: flex;
  width: 40px;
  height: 40px;
  border: 1px solid #a8a8a8;
  border-radius: 100%;
  transition: border-color 0.15s ease-out;
}
.header__social-item:hover {
  border-color: #ff1400;
}
.header__social-telegram,
.header__social-instagram,
.header__social-linkedin {
  background-repeat: no-repeat;
  background-size: 60%;
  background-position: center;
}
.header__social-telegram {
  background-image: url("./images/telegram.svg");
}
.header__social-instagram {
  background-image: url("./images/instagram.svg");
}
.header__social-linkedin {
  background-image: url("./images/linkedin.svg");
}
main {
  padding-top: 140px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
main section {
  max-width: 1400px;
}
.cover {
  min-width: 100%;
  display: flex;
  justify-content: center;
}
.cover__heading {
  width: 624px;
  font-size: 50px;
  font-weight: 900;
}
.cover__heading span {
  color: #ff1400;
}
.cover__subheading {
  margin-top: 30px;
  width: 530px;
  margin-bottom: 30px;
  font-weight: 400;
}
.left-side {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.right-side img {
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
}

@property --myColor1 {
  syntax: "<color>";
  initial-value: #000;
  inherits: false;
}

@property --myColor2 {
  syntax: "<color>";
  initial-value: #000;
  inherits: false;
}
.jobs-check {
  width: 357px;
  height: 83px;
  background-color: #111111;
  border-radius: 20px;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  color: white;
  text-decoration: none;
  background: linear-gradient(
    140deg,
    var(--myColor1),
    var(--myColor2),
    var(--myColor1)
  );
  transition: box-shadow 0.15s ease, --myColor1 1s ease, --myColor2 1s ease;
}
.jobs-check:hover {
  --myColor1: red;
  --myColor2: #000;
  box-shadow: 0px 4px 15px 0px rgba(149, 7, 7, 1); /* Apply box shadow on hover */
}
.vacancies {
  flex-wrap: wrap;
  display: flex;
}
.vacancies__heading {
  font-size: 36px;
  margin-top: 120px;
  margin-bottom: 70px;
}
.vacancies .list {
  gap: 30px;
  flex-wrap: wrap;
  display: flex;
}
.list__item {
  padding: 0px 45px 0px 30px;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #d7d7d7;
  display: flex;
  border-radius: 20px;
  width: 680px;
  height: 80px;
  transition: all 0.25s ease;
}
.list__item a {
  display: inline-block;
  font-size: 20px;
  text-decoration: none;
}
.list__item a:visited {
  color: black;
}
.list__item:hover {
  background-color: #111111;
  color: white;
  background-image: url("/images/vacancybg.png");
  background-position: center center;
  background-size: cover !important;
  cursor: pointer;
}
.list__item:nth-child(1):hover a {
  color: white;
}
.list__item:nth-child(2):hover a {
  color: white;
}
.list__item:nth-child(3):hover a {
  color: white;
}
.list__item:nth-child(4):hover a {
  color: white;
}
.list__item:nth-child(5):hover a {
  color: white;
}
.list__item:nth-child(1):hover svg path {
  stroke: white;
}
.list__item:nth-child(2):hover svg path {
  stroke: white;
}
.list__item:nth-child(3):hover svg path {
  stroke: white;
}
.list__item:nth-child(4):hover svg path {
  stroke: white;
}
.list__item:nth-child(5):hover svg path {
  stroke: white;
}
.leaders {
  margin-top: 120px;
  display: flex;
  flex-direction: column;
}
.leaders span {
  font-size: 24px;
  line-height: 36px;
}
.leaders h2 {
  font-size: 36px;
  margin-bottom: 30px;
}
.leaders__statistic {
  justify-content: space-between;
  margin-top: 120px;
  display: flex;
}
.leaders__statistic-block {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid #d7d7d7;
  border-radius: 20px;
  width: 420px;
  height: 161px;
}
.leaders__statistic-block div {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.leaders__statistic-block div span:first-child {
  font-weight: 900;
  font-size: 48px;
  color: #ff1400;
  margin-bottom: 8px;
}
.leaders__statistic-block div span:last-child {
  font-size: 24px;
}
.community,
.professionals {
  margin-top: 120px;
  display: flex;
  align-items: center;
  gap: 70px;
}
.professionals {
  margin-top: 00px;
}
.community__text,
.professionals__text {
  display: flex;
  flex-direction: column;
  gap: 30px;
}
.community__text h2,
.professionals__text h2 {
  font-size: 36px;
  font-weight: 700;
}
.community__text span,
.professionals__text span {
  font-size: 24px;
  line-height: 36px;
}
.community__text span b {
  color: #ff1400;
}
.main__relocation-heading {
  max-width: 100%;
  margin-top: 45px;
  margin-bottom: 120px;
}
.relocation {
  display: flex;
  flex-direction: column;
}
.benefits {
  display: flex;
  flex-direction: column;
}
.benefits__heading {
  font-size: 36px;
  margin-bottom: 70px;
}
.benefits__block {
  display: flex;
  align-items: center;
}
.benefits__list {
  display: flex;
  height: 189px;
  list-style-type: none;
  flex-wrap: wrap;
}
.benefits__list li {
  margin: 10px;
  width: 297px;
  display: flex;
  align-items: center;
  padding-left: 25px;
  height: 72px;
  font-size: 24px;
  border-left: 3px solid #ff1400;
}
.landing {
  margin-top: 120px;
}
.landing__heading {
  font-size: 36px;
  margin-bottom: 70px;
}
.landing__list {
  justify-content: space-between;
  min-width: 100%;
  display: flex;
  flex-wrap: wrap;
}
.landing__item {
  width: 390px;
  align-items: center;
  display: flex;
}
.landing__item div {
  margin-right: 20px;
  color: #ff1400;
  font-weight: 900;
  font-size: 83px;
}
.landing__item p {
  font-size: 24px;
}
.relocation__offering {
  margin-top: 120px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.relocation__offering span {
  font-size: 36px;
  font-weight: bold;
  margin-right: 50px;
}
.form {
  height: 935px;
  margin-top: 120px;
  background-color: #e8e8e8;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.form__email,
.form__name {
  outline: none;
  background-color: transparent;
  border: none;
  font-size: 24px;
}
.form__form {
  border-right: 1px solid #d7d7d7;
}
.form__form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding-right: 70px;
}
.form__input {
  overflow: hidden;
  width: 630px;
  height: 100px;
  border-radius: 20px;
  border: 1px solid #9a9a9a;
  display: flex;
  align-items: center;
  background-color: white;
}
.form__input-message {
  padding-top: 30px;
  display: flex;
  align-items: flex-start;
  height: 325px;
}
.form__input-message textarea {
  border: none;
  resize: none;
  font-size: 24px;
  outline: none;
  width: 100%;
  height: 200px;
  overflow: hidden;
}
.form__email:focus,
.form__name:active {
  background: transparent;
}
.form__form div div {
  width: 40px;
  height: 2px;
  background-color: #ff1400;
  margin-left: 20px;
  margin-right: 20px;
}
.form__line-message {
  margin-top: 15px;
}
.form__input-send {
  cursor: pointer;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: #111111;
  border-radius: 20px;
  border: none;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  color: white;
  text-decoration: none;
  background: linear-gradient(
    140deg,
    var(--myColor1),
    var(--myColor2),
    var(--myColor1)
  );
  transition: --myColor1 1s ease, --myColor2 1s ease;
}
.form__input-send:hover {
  --myColor1: red;
  --myColor2: #000;
}
.form__input-sendbox {
  border: none;
  transition: box-shadow 0.15s ease;
}
.form__input-sendbox:hover {
  box-shadow: 0px 4px 15px 0px rgba(149, 7, 7, 1); /* Apply box shadow on hover */
}
.form__emails {
  padding-left: 70px;
}
.form__social {
  display: flex;
  align-items: center;
  gap: 10px;
}
.form__social-item {
  display: flex;
  width: 40px;
  height: 40px;
  border: 1px solid #a8a8a8;
  border-radius: 100%;
  transition: border-color 0.15s ease-out;
}
.form__social-item:hover {
  border-color: #ff1400;
}
.form__social-telegram,
.form__social-instagram,
.form__social-linkedin {
  background-repeat: no-repeat;
  background-size: 60%;
  background-position: center;
}
.form__social-telegram {
  background-image: url("./images/telegram-black.svg");
}
.form__social-instagram {
  background-image: url("./images/instagram-black.svg");
}
.form__social-linkedin {
  background-image: url("./images/linkedin-black.svg");
}
.form__redline {
  width: 40px;
  height: 3px;
  background-color: #ff1400;
}
.form__block-email {
  margin-top: 10px;
  display: flex;
  align-items: center;
}
.form__block-email a {
  display: inline-block;
  margin-left: 10px;
  color: black;
  text-decoration: none;
  font-size: 24px;
}
.email {
  margin-bottom: 70px;
}
.email h4 {
  font-size: 24px;
  font-weight: 700;
}
footer {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 206px;
  background-color: #111111;
  padding-top: 52px;
}
.footer__legal {
  color: #d7d7d7;
}

